--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.1.0",
+    "bootstrap": "^5.2.3",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
+    "tr-currency": "^0.0.7",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
