--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -49,8 +49,9 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [              
-              "src/styles.css"            
+            "styles": [
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/timer.css"
             ],
             "scripts": []
           },
