--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.0.0",
     "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "bootstrap": "^5.2.3",
+    "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tr-currency": "^0.0.7",
